Perf: improve query analysis